Finished plugin management (create, edit), setting the active plugin, started the table management implementation, minor refactoring in the entity client-side classes.

--- a/controllers/index/_plugin-selector.htm
+++ b/controllers/index/_plugin-selector.htm
@@ -1,6 +1,6 @@
 <div class="layout control-scrollpanel">
     <div class="layout-cell">
-        <div class="layout-relative">
+        <div class="layout-relative" id="builder-plugin-selector-panel">
             <form class="layout" onsubmit="return false">
                 <?= $this->widget->pluginList->render() ?>
             </form>
