--- a/controllers/index/index.htm
+++ b/controllers/index/index.htm
@@ -19,7 +19,7 @@
             data-pane-classes="layout-cell"
             data-max-title-symbols="15"
             data-title-as-file-names="false"
-            class="layout control-tabs master fancy-layout oc-bg-logo"
+            class="layout control-tabs master-tabs fancy-layout oc-bg-logo"
             id="builder-master-tabs">
 
             <div class="layout-row min-size">
