Experimental flexbox layout

--- a/controllers/index/_plugin-selector.htm
+++ b/controllers/index/_plugin-selector.htm
@@ -1,9 +1,5 @@
-<div class="layout control-scrollpanel">
-    <div class="layout-cell">
-        <div class="layout-relative" id="builder-plugin-selector-panel">
-            <form class="layout" onsubmit="return false">
-                <?= $this->widget->pluginList->render() ?>
-            </form>
-        </div>
-    </div>
+<div class="flex-layout-item relative control-scrollpanel" id="builder-plugin-selector-panel">
+    <form class="flex-layout-item layout-column" onsubmit="return false">
+        <?= $this->widget->pluginList->render() ?>
+    </form>
 </div>
