--- a/controllers/index/_sidepanel.htm
+++ b/controllers/index/_sidepanel.htm
@@ -1,25 +1,22 @@
-<div class="layout control-scrollpanel" id="builder-side-panel">
-    <div class="layout-cell">
-        <div class="layout-relative fix-button-container fix-button-content-header">
-            <!-- Tables -->
-            <form
-                class="layout"
-                data-content-id="database"
-                data-template-type="database"
-                data-type-icon="oc-icon-table"
-                onsubmit="return false">
-                <?= $this->widget->databaseTabelList->render() ?>
-            </form>
+<div class="flex-layout-item flex-layout-column control-scrollpanel relative fix-button-container fix-button-content-header" id="builder-side-panel">
+        <!-- Tables -->
+        <form
+            class="flex-layout-item flex-layout-column stretch"
+            data-content-id="database"
+            data-template-type="database"
+            data-type-icon="oc-icon-table"
+            onsubmit="return false">
+            <?= $this->widget->databaseTabelList->render() ?>
+        </form>
 
-            <!-- Models -->
-            <form
-                class="layout hide"
-                data-content-id="models"
-                data-template-type="model"
-                data-type-icon="oc-icon-random"
-                onsubmit="return false">
-                <?= $this->widget->modelList->render() ?>
-            </form>
-        </div>
-    </div>
+        <!-- Models -->
+        <form
+            class="flex-layout-item flex-layout-column stretch hide"
+            data-content-id="models"
+            data-template-type="model"
+            data-type-icon="oc-icon-random"
+            onsubmit="return false">
+            <?= $this->widget->modelList->render() ?>
+        </form>
+
 </div>
