Experimental flexbox layout

--- a/controllers/index/index.htm
+++ b/controllers/index/index.htm
@@ -16,13 +16,13 @@
             data-control="tab"
             data-closable
             data-close-confirmation="<?= e(trans('backend::lang.form.confirm_tab_close')) ?>"
-            data-pane-classes="layout-fill-container"
+            data-pane-classes="flex-layout-item flex-layout-column stretch fill-container"
             data-max-title-symbols="15"
             data-title-as-file-names="false"
             class="flex-layout-column fill-container control-tabs master-tabs fancy-layout oc-bg-logo"
             id="builder-master-tabs">
 
-            <div class="layout-row min-size">
+            <div class="flex-layout-item fix">
                 <div class="tabs-container">
                     <ul class="nav nav-tabs"></ul>
                 </div>
