--- a/controllers/index/index.htm
+++ b/controllers/index/index.htm
@@ -22,7 +22,7 @@
             class="flex-layout-column fill-container control-tabs master-tabs fancy-layout oc-bg-logo"
             id="builder-master-tabs">
 
-            <div class="layout-row min-size">
+            <div class="flex-layout-item fix">
                 <div class="tabs-container">
                     <ul class="nav nav-tabs"></ul>
                 </div>
