Minor update for new logo approach Update URL to icon lib

--- a/controllers/index/index.htm
+++ b/controllers/index/index.htm
@@ -19,7 +19,7 @@
             data-pane-classes="layout-fill-container"
             data-max-title-symbols="15"
             data-title-as-file-names="false"
-            class="flex-layout-column fill-container control-tabs master-tabs fancy-layout oc-bg-logo"
+            class="flex-layout-column fill-container control-tabs master-tabs fancy-layout oc-logo-transparent"
             id="builder-master-tabs">
 
             <div class="flex-layout-item fix">
